@@ -25,7 +25,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.evitadb</groupId>
 	<artifactId>evita_root</artifactId>
-	<version>2024.9-SNAPSHOT</version>
+	<version>2024.10-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>evitaDB - Root &amp; modules aggregator</name>
 	<url>https://evitadb.io</url>
@@ -111,16 +111,12 @@
 		<junit.jupiter.version>5.10.2</junit.jupiter.version>
 		<maven.compiler.version>3.10.1</maven.compiler.version>
 		<maven.toolchains.version>3.0.0</maven.toolchains.version>
-		<jboss.version>3.5.1.Final</jboss.version>
 		<lombok.version>1.18.30</lombok.version>
-		<grpc.version>1.62.2</grpc.version>
+		<grpc.version>1.63.0</grpc.version>
 		<bouncyCastle.version>1.78</bouncyCastle.version>
-		<!--Compatible versions with gRPC could be found here: https://github.com/grpc/grpc-java/blob/master/SECURITY.md#netty -->
-		<nettyHandler.version>4.1.100.Final</nettyHandler.version>
 		<swagger.version>2.2.15</swagger.version>
-		<undertow.version>2.3.14.Final</undertow.version>
+		<armeria.version>1.29.3</armeria.version>
 		<prometheus.version>1.3.1</prometheus.version>
-		<xnio.version>3.8.14.Final</xnio.version>
 		<byteBuddy.version>1.14.17</byteBuddy.version>
 	</properties>
 
@@ -164,7 +160,7 @@
 			<dependency>
 				<groupId>com.squareup.okhttp3</groupId>
 				<artifactId>okhttp</artifactId>
-				<version>5.0.0-alpha.14</version>
+				<version>4.12.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -227,24 +223,14 @@
 				<version>${slf4j.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.jboss.threads</groupId>
-				<artifactId>jboss-threads</artifactId>
-				<version>${jboss.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.jboss.xnio</groupId>
-				<artifactId>xnio-api</artifactId>
-				<version>${xnio.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.jboss.xnio</groupId>
-				<artifactId>xnio-nio</artifactId>
-				<version>${xnio.version}</version>
-			</dependency>
-			<dependency>
 				<groupId>commons-io</groupId>
 				<artifactId>commons-io</artifactId>
 				<version>2.11.0</version>
+			</dependency>
+			<dependency>
+				<groupId>com.linecorp.armeria</groupId>
+				<artifactId>armeria</artifactId>
+				<version>${armeria.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -443,8 +429,6 @@
 					<compilerVersion>${java.version}</compilerVersion>
 					<compilerArgs>
 						<arg>-parameters</arg>
-						<arg>--add-exports</arg>
-						<arg>ch.qos.logback.core/ch.qos.logback.core.hook=evita.server</arg>
 					</compilerArgs>
 					<annotationProcessorPaths>
 						<path>
